--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,11 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "hjs": "~0.0.6",
     "mongoose": "^4.13.7",
