--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "body-parser": "~1.17.1",
+    "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
@@ -15,6 +16,7 @@
     "hjs": "~0.0.6",
     "mongoose": "^4.13.7",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "superagent": "^3.8.2"
   }
 }
