hashed the profile password with bcryptjs

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "~1.17.1",
     "cheerio": "^1.0.0-rc.2",
