--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "hjs": "~0.0.6",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.7",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
