--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "~1.17.1",
     "cheerio": "^1.0.0-rc.2",
+    "client-sessions": "^0.8.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
