--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cheerio": "^1.0.0-rc.2",
     "client-sessions": "^0.8.0",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
