--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "mongo" : "mongod",
+    "mongo": "mongod",
     "webpack": "webpack -w"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "cheerio": "^0.22.0",
     "client-sessions": "^0.7.0",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
