--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
     "webpack": "webpack -w"
   },
   "dependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
     "bcryptjs": "^2.4.0",
     "bluebird": "^3.4.7",
     "body-parser": "~1.15.1",
@@ -35,5 +31,17 @@
     "serve-favicon": "~2.3.0",
     "superagent": "^3.3.1",
     "webpack": "^1.14.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.6",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.0.9",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1"
   }
 }
