--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "mongoose": "^4.7.4",
     "morgan": "~1.7.0",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^15.4.1",
+    "react-modal": "^3.1.10",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.1.0",
     "serve-favicon": "~2.3.0",
     "superagent": "^3.3.1",
-    "webpack": "^1.14.0"
-  },
-  "devDependencies": {
+    "webpack": "^1.14.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
