--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_URL=mongodb://localhost/Bookmark-Sharing
+DB_URL=mongodb://admin:password@ds239557.mlab.com:39557/bookmarksharing
 TOKEN_SECRET=21212121232121
 SESSION_SECRET=asidiasd
